# viking

./: Cargo.toml  README.md
docs/: Design.md  GPIO.md  I2C.md  LED.md  Level_Interrupt.md  README.md  SPI.md
viking-cli/: Cargo.toml
viking-cli/src/: main.rs
viking-io/: Cargo.toml
viking-io/examples/: blink.rs  i2c-accel-mma8452q.rs  nrf.rs
viking-io/src/: command.rs  descriptor.rs  device.rs  gpio.rs  i2c.rs  led.rs  lib.rs  spi.rs
viking-protocol/: Cargo.toml
viking-protocol/src/: descriptor.rs  field.rs  flags.rs  lib.rs  request.rs
viking-protocol/src/protocol/: gpio.rs  i2c.rs  led.rs  mod.rs  spi.rs
