[package]
name = "viking-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
env_logger = "0.11.3"
futures-lite = "2.3.0"
viking-io = { path = "../viking-io" }
viking-protocol = { path = "../viking-protocol" }
embedded-hal-async = "1.0.0"

