[package]
name = "viking-io"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/signalspec/viking"
edition = "2024"

[dependencies]
async-lock = "3.4.0"
embedded-hal-async = "1.0.0"
futures-lite = "2.3.0"
log = "0.4.22"
nusb = { git = "https://github.com/kevinmehall/nusb.git", rev = "a9ef4ca1ae9d18546011768eaf72a1ec9b208ea7" }
thiserror = "2.0.12"
viking-protocol = { path = "../viking-protocol" }
zerocopy = "0.8"

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
